--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">Python for GIS</h4>
                     <a href="https://github.com/BRaimbault/py_GIS_toolbox/wiki" target="_blank"><div style="position: relative; width: 220px; height: 220px; background-image: url('thumbnails/white_image.png'); background-size: cover;" class="center-block border">
-                        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/220px-Python-logo-notext.svg.png" alt="Have a look at my Python scripts" class="center-block border" style="padding: 40px 40px" width="220" height="220"/>
+                        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/220px-Python-logo-notext.svg.png" alt="Have a look at my Python scripts" style="padding: 40px 40px" width="220" height="220"/>
                     </div></a>
                     <p class="spacer">
                         Here are presented some of the scripts I wrote in Python to automate tasks in GIS software: 
